--- a/client/src/pages/protected/HeadlessRasterizerView/HeadlessRasterizerView.css
+++ b/client/src/pages/protected/HeadlessRasterizerView/HeadlessRasterizerView.css
@@ -7,6 +7,37 @@
   background-color: #000;
 }
 
+.raster-view-container .dislocation-result-data-container{
+  font-size: .9rem;
+  gap: 0;
+}
+
+.raster-view-container .dislocation-result-item{
+  gap: 0;
+}
+
+.raster-view-container .dislocation-result-item-title{
+  font-size: .9rem;
+}
+
+.raster-view-container .dislocation-results-container{
+  top: unset;
+  left: unset;
+  right: unset;
+  bottom: 0;
+  background-color: rgb(30 30 30 / 0%);
+  height: 350px;
+}
+
+.raster-view-container .dislocation-results-summary-container{
+  background-color: rgb(21 21 21 / 82%);
+}
+
+.raster-scene-left-container,
+.raster-scene-right-container{
+  position: relative;
+}
+
 /* Header contenedor derecho */
 .raster-scene-header-nav-container{
   display: flex;
@@ -172,6 +203,10 @@
   height: calc(100% - 80px - 170px - 66px);
   display: flex;
   gap: 1rem;
+}
+
+.raster-scene-column-container{
+  position: relative;
 }
 .raster-scene-container{
   width: 100%;
