--- a/client/src/pages/protected/HeadlessRasterizerView/HeadlessRasterizerView.css
+++ b/client/src/pages/protected/HeadlessRasterizerView/HeadlessRasterizerView.css
@@ -1,6 +1,43 @@
 /* HeadlessRasterizerView.css */
 /* ====== CONTENEDORES EXISTENTES ====== */
 
+.structure-analysis-results-container{
+  position: absolute;
+  top: 0;
+  z-index: 99999999;
+  padding: 1rem;
+}
+
+.structure-type-legend{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.dislocation-type-legend {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 8px;
+    margin-top: 8px;
+}
+
+.type-legend-item {
+    display: flex;
+    align-items: center;
+    gap: 4px;
+    font-size: 12px;
+}
+
+.type-legend-color {
+    width: 12px;
+    height: 12px;
+    border-radius: 2px;
+}
+
+.type-legend-text {
+    color: #dadada;
+}
+
 /* Progress Indicator Styles */
 .preload-progress-indicator {
   position: fixed;
