--- a/client/src/components/atoms/form/Select/Select.css
+++ b/client/src/components/atoms/form/Select/Select.css
@@ -63,7 +63,9 @@
     top: calc(100% + 6px);
     left: 0;
     right: 0;
-    max-height: 260px;
+    width: max-content;
+	min-width: 100%;
+	max-width: var(--select-list-max-width, 480px);
     overflow: auto;
     background: #fff;
     border: 1px solid #E5E7EB;
@@ -92,9 +94,15 @@
     font-weight: 600;
 }
 
+.select-option-description{
+    font-size: .7rem;
+}
+
 .select-option-title {
-    flex: 1 1 auto;
     font-size: .85rem;
+    flex: 1 1 auto;
+    display: flex;
+    flex-direction: column;
     min-width: 0;  
     overflow: hidden;
     text-overflow: ellipsis;
