--- a/client/src/components/atoms/DashboardLayout/DashboardLayout.css
+++ b/client/src/components/atoms/DashboardLayout/DashboardLayout.css
@@ -68,6 +68,8 @@
     width: 2.5rem;
     height: 2.5rem;
     display: flex;
+    background-color: rgb(46 46 46 / 50%);
+    backdrop-filter: blur(5px);
     justify-content: center;
     align-items: center;
 }
