--- a/client/src/components/atoms/SimulationCard/SimulationCard.css
+++ b/client/src/components/atoms/SimulationCard/SimulationCard.css
@@ -1,12 +1,11 @@
 .simulation-container{
-    min-width: 470px;
-    min-height: 245px;
-    width: 470px;
-    height: 245px;
+    width: 100%;
     cursor: pointer;
     position: relative;
     box-shadow: 0px 0px 1px 0px #cacaca;
     border-radius: .8rem;
+    overflow: hidden;
+    background: #111;
 }
 
 .simulation-cover-container::before{
@@ -45,13 +44,14 @@
 
 .simulation-cover-container{
     width: 100%;
-    height: 100%;
+    height: 200px; /* fixed card height */
     display: flex;
     border-radius: .8rem;
     transition: .1s;
     justify-content: center;
     align-items: center;
     overflow: hidden;
+    position: relative; /* anchor ::before gradient */
 }
 
 .simulation-caption-left-container{
@@ -66,11 +66,11 @@
     display: flex;
     align-items: center;
     position: absolute;
-    bottom: 2rem;
-    left: 2rem;
+    bottom: 1.5rem;
+    left: 1.5rem;
     gap: .5rem;
-    width: calc(100% - 4rem);
-    z-index: 30000;
+    width: calc(100% - 2rem);
+    z-index: 2;
 }
 
 .simulation-caption-title{
@@ -82,6 +82,8 @@
 .simulation-image{
     width: 100%;
     height: 100%;
+    object-fit: cover;
+    display: block;
 }
 
 .simulation-cover-icon-container{
@@ -111,11 +113,11 @@
 
 @media screen and (max-width: 768px){
     .simulation-container{
-        width: 100%;
-        padding: .5rem;
+    width: 100%;
+    padding: .25rem;
     }
 
     .simulation-cover-container{
-        height: 250px;
+        height: 200px;  
     }
 }
